fix: API articles has a huge gap on top

--- a/_buildApi/BuildAPI/docfx-tmpl/src/styles/docfx.css
+++ b/_buildApi/BuildAPI/docfx-tmpl/src/styles/docfx.css
@@ -598,7 +598,6 @@ body .toc{
   left: 5px;
 }
 .article {
-  margin-top: 120px;
   margin-bottom: 115px;
 }
 
